k8s/agenda/agenda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agenda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agenda
  template:
    metadata:
      labels:
        app: agenda
    spec:
      containers:
        - name: agenda
          image: agenda:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
