k8s/agenda/agenda-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agenda
spec:
  type: NodePort
  selector:
    app: agenda
  ports:
    - port: 80
      targetPort: 8080
