k8s/agenda/agenda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agenda-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: agenda.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agenda
                port:
                  number: 80
